test/negative/ContradictoryInterpolation.hx
class ContradictoryInterpolation {
	static function main():Void {
		var value = <heredoc interpolate={false} reindent={false}>text</heredoc>;
	}
}
